# qt6-foreign-toplevel-management

./: CMakeLists.txt  README.md
debian/: control
src/: foreign-toplevel-management.cpp  foreign-toplevel-management_p.h  qt6-foreign-toplevel-management.h  qt6-foreign-toplevel-management.pc.in
